--- a/Spring_example/.project
+++ b/Spring_example/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Playing_with_Java-Spring</name>
+	<name>Spring_example</name>
 	<comment></comment>
 	<projects>
 	</projects>
